--- a/src/integrationTest/resources/application.yml
+++ b/src/integrationTest/resources/application.yml
@@ -10,6 +10,7 @@ spring:
     show-sql: true
     properties:
       hibernate:
+        dialect: org.hibernate.dialect.PostgreSQLDialect
         order_updates: true
         order_inserts: true
         default_schema: dbrefdata
