--- a/src/integrationTest/resources/application.yml
+++ b/src/integrationTest/resources/application.yml
@@ -90,7 +90,15 @@ resendInterval: 60
 syncInterval: 60
 
 defaultPageSize: ${DEFAULTPAGESIZE:10}
+feign:
+  allow:
+    headers:
+      - authorization
+      - serviceauthorization
 
+jurisdictionIdType: ADMIN_ROLE,CCD_ROLE,SIDAM_ROLE
+
+userProfUrl: ${USER_PROFILE_URL:http://127.0.0.1:8091}
 loggingComponentName: RD_Professional_API
 
 
@@ -134,3 +142,33 @@ route:
     csv-binder-object: BulkCustomerDetails
     csv-headers-expected: Organisation_ID,Bulk_Customer_ID,Sidam_ID,PBA
     header-validation-enabled: true
+
+
+# delete organisation enabled
+deleteOrganisationEnabled : ${DELETE_ORG:false}
+
+# get Active Orgs External enabled
+activeOrgsExternalEnabled : ${ACTIVE_ORG_EXT:false}
+
+launchdarkly:
+  sdk:
+    key: ${LD_SDK_KEY:}
+    environment: ${LAUNCH_DARKLY_ENV:local}
+    user: rd
+
+security:
+  anonymousPaths:
+    - "/"
+    - "/health"
+    - "/health/readiness"
+    - "/health/liveness"
+    - "/actuator/**"
+    - "/loggers/**"
+    - "/swagger-ui.html"
+    - "/swagger-resources/**"
+    - "/v3/**"
+    - "/swagger-ui/**"
+    - "/webjars/springfox-swagger-ui/**"
+    - "/csrf"
+    - "/error"
+    - "/favicon.ico"
