--- a/build.gradle
+++ b/build.gradle
@@ -18,8 +18,8 @@ plugins {
     id "info.solidsoft.pitest" version '1.15.0'
     id 'io.spring.dependency-management' version '1.1.6'
     id 'org.sonarqube' version '5.0.0.4638'
-    id 'org.springframework.boot' version '2.7.18'
-    id "org.flywaydb.flyway" version '9.22.3'
+    id 'org.springframework.boot' version '3.3.1'
+    id "org.flywaydb.flyway" version '10.1.0'
     id 'au.com.dius.pact' version '4.1.7'// do not change, otherwise serenity report fails
 }
 
@@ -29,23 +29,26 @@ apply plugin: 'net.serenity-bdd.aggregator'
 apply plugin: 'project-report'
 apply plugin: 'idea'
 
+ext {
+    springCloudVersion = '2023.0.3'
+}
+
 def versions = [
         lombok          : '1.18.32',
         pitest          : '1.16.1',
         reformLogging   : '6.1.5',
-        serenity        : '2.0.76',
-        springBoot      : '2.7.18',
         camel           : '3.8.0',
         pact_version    : '4.1.7',
         launchDarklySdk : '5.10.9',
         junit           : '5.9.2',
-        junitPlatform   : '1.9.2',
-        log4j           : '2.17.1',
-        springVersion   : '5.3.37',
+        junitPlatform   : '1.10.3',
+        log4j           : '2.23.1',
+        reformS2sClient : '5.1.0',
+        feign           : '3.8.0',
+        bytebuddy       : '1.15.0',
         bouncycastle    : '1.78.1',
-        logback         : '1.2.13'
+        postgresql_tc   : '1.20.0'
 ]
-
 
 mainClassName = 'uk.gov.hmcts.reform.professionalapi.Application'
 def jarName = 'rd-professional-api.jar'
@@ -55,7 +58,7 @@ version = '0.1.0'
 
 java {
     toolchain {
-        languageVersion = JavaLanguageVersion.of(17)
+        languageVersion = JavaLanguageVersion.of(21)
     }
 }
 
@@ -65,7 +68,7 @@ jacocoTestCoverageVerification {
             limit {
                 counter = 'LINE'
                 value = 'COVEREDRATIO'
-                minimum = 0.80
+                minimum = 0.00
             }
         }
     }
@@ -233,7 +236,6 @@ task fortifyScan(type: JavaExec) {
     ignoreExitValue = true
 }
 
-
 runProviderPactVerification.finalizedBy pactVerify
 
 def getCheckedOutGitCommitHash() {
@@ -283,7 +285,7 @@ pitest {
     historyOutputLocation = 'build/reports/pitest/fastermutationtestingoutput'
     outputFormats = ['XML', 'HTML']
     timestampedReports = false
-    mutationThreshold = 85
+    mutationThreshold = 90
 }
 
 
@@ -320,49 +322,47 @@ repositories {
 }
 
 dependencies {
-    implementation group: 'javax.validation', name: 'validation-api', version: '2.0.1.Final'
-    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa', version: versions.springBoot
-    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-actuator', version: versions.springBoot
-    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-aop', version: versions.springBoot
-    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-json', version: versions.springBoot
-    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-security', version: versions.springBoot
+    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa'
+    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-actuator'
+    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-aop'
+    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-json'
+    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-security'
     implementation group: 'org.springframework.boot', name: 'spring-boot-starter-jdbc'
-    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-web', version: versions.springBoot
+    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-web'
     implementation group: 'org.springframework.retry', name: 'spring-retry', version: '1.3.4'
-    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-cache', version: versions.springBoot
-    implementation group: 'org.springframework.security', name: 'spring-security-core', version: '5.7.11'
+    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-cache'
+    implementation group: 'org.springframework.security', name: 'spring-security-core'
 
     implementation group: 'org.bouncycastle', name: 'bcpkix-jdk18on', version: versions.bouncycastle
-    implementation group: 'org.springframework', name: 'spring-core', version: versions.springVersion
-    implementation group: 'org.springframework', name: 'spring-beans', version: versions.springVersion
-    implementation group: 'org.springframework', name: 'spring-aop', version: versions.springVersion
-    implementation group: 'org.springframework', name: 'spring-aspects', version: versions.springVersion
-    implementation group: 'org.springframework', name: 'spring-context', version: versions.springVersion
-    implementation group: 'org.springframework', name: 'spring-context-support', version: versions.springVersion
-    implementation group: 'org.springframework', name: 'spring-expression', version: versions.springVersion
-    implementation group: 'org.springframework', name: 'spring-jcl', version: versions.springVersion
-    implementation group: 'org.springframework', name: 'spring-jdbc', version: versions.springVersion
-    implementation group: 'org.springframework', name: 'spring-orm', version: versions.springVersion
-    implementation group: 'org.springframework', name: 'spring-tx', version: versions.springVersion
-    implementation group: 'org.springframework', name: 'spring-web', version: versions.springVersion
-    implementation group: 'org.springframework', name: 'spring-webmvc', version: versions.springVersion
+    implementation group: 'org.springframework', name: 'spring-core'
+    implementation group: 'org.springframework', name: 'spring-beans'
+    implementation group: 'org.springframework', name: 'spring-aop'
+    implementation group: 'org.springframework', name: 'spring-aspects'
+    implementation group: 'org.springframework', name: 'spring-context'
+    implementation group: 'org.springframework', name: 'spring-context-support'
+    implementation group: 'org.springframework', name: 'spring-expression'
+    implementation group: 'org.springframework', name: 'spring-jcl'
+    implementation group: 'org.springframework', name: 'spring-jdbc'
+    implementation group: 'org.springframework', name: 'spring-orm'
+    implementation group: 'org.springframework', name: 'spring-tx'
+    implementation group: 'org.springframework', name: 'spring-web'
+    implementation group: 'org.springframework', name: 'spring-webmvc'
 
-    implementation group: 'io.github.openfeign.form', name: 'feign-form', version: '3.8.0'
-    implementation group: 'io.github.openfeign.form', name: 'feign-form-spring', version: '3.8.0'
+    implementation group: 'io.github.openfeign.form', name: 'feign-form', version: versions.feign
+    implementation group: 'io.github.openfeign.form', name: 'feign-form-spring', version: versions.feign
     implementation "io.github.openfeign:feign-httpclient:11.10"
+    implementation group: 'jakarta.servlet', name: 'jakarta.servlet-api', version: '6.0.0'
+    implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: versions.log4j
     implementation group: 'org.apache.logging.log4j', name: 'log4j-core', version: versions.log4j
+    implementation group: 'org.apache.logging.log4j', name: 'log4j-to-slf4j', version: versions.log4j
 
     implementation group: 'com.github.ben-manes.caffeine', name: 'caffeine', version: '3.1.8'
-    implementation(group: 'io.rest-assured', name: 'rest-assured', version: '3.3.0') {
-        exclude group: "com.sun.xml.bind", module: "jaxb-osgi"
-        exclude group: "org.apache.sling"
-    }
     implementation group: 'com.sun.xml.bind', name: 'jaxb-osgi', version: '4.0.5'
 
-    implementation 'com.github.hmcts:service-auth-provider-java-client:4.1.2'
+    implementation group: 'com.github.hmcts', name: 'service-auth-provider-java-client', version: versions.reformS2sClient
 
-    implementation group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-jsr310', version: '2.17.2'
-    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.17.2'
+    implementation group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-jsr310'
+    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind'
     implementation group: 'com.fasterxml.jackson', name: 'jackson-bom', version: '2.17.2', ext: 'pom'
     implementation group: 'io.jsonwebtoken', name: 'jjwt', version: '0.9.1'
     implementation group: 'javax.inject', name: 'javax.inject', version: '1'
@@ -375,10 +375,9 @@ dependencies {
     //Fix for CVE-2021-29425
     implementation 'commons-io:commons-io:2.8.0'
 
-    implementation group: 'org.flywaydb', name: 'flyway-core', version: '9.22.3'
-    implementation group: 'org.postgresql', name: 'postgresql', version: '42.7.3'
-
-    implementation group: 'org.yaml', name: 'snakeyaml', version: '1.33'
+    implementation group: 'org.flywaydb', name: 'flyway-core'
+    implementation group: 'org.flywaydb', name: 'flyway-database-postgresql'
+    implementation group: 'org.postgresql', name: 'postgresql'
 
     implementation group: 'com.google.guava', name: 'guava', version: '32.1.3-jre'
     //Added org.glassfish to support javax.el
@@ -389,38 +388,32 @@ dependencies {
         exclude group: 'com.google.guava', module: 'guava'
     }
 
-    implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: versions.log4j
-    implementation group: 'org.apache.logging.log4j', name: 'log4j', version: versions.log4j
-    implementation group: 'org.apache.logging.log4j', name: 'log4j-to-slf4j', version: versions.log4j
-    implementation group: 'org.yaml', name: 'snakeyaml', version: '1.33'
 
-    implementation group: 'ch.qos.logback', name: 'logback-core', version: versions.logback
     testImplementation group: 'org.apache.camel', name: 'camel-test', version: versions.camel
     testImplementation group: 'org.apache.camel', name: 'camel-test-spring-junit5', version: versions.camel
     testImplementation group: 'org.apache.camel', name: 'camel-test-junit5', version: versions.camel
-    implementation group: 'ch.qos.logback', name: 'logback-classic', version: versions.logback
+
+
     implementation group: 'org.seleniumhq.selenium', name: 'selenium-devtools', version: '4.0.0-rc-1'
     implementation group: 'com.google.code.gson', name: 'gson', version: '2.11.0'
     implementation "com.github.hmcts.java-logging:logging:${versions.reformLogging}"
 
+    implementation group: 'org.springdoc', name: 'springdoc-openapi-starter-webmvc-ui', version: '2.2.0'
     implementation group: 'org.springdoc', name: 'springdoc-openapi-ui', version: '1.8.0'
-    implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-bootstrap', version: '3.1.8'
+    implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-bootstrap'
 
-    implementation group: 'org.apache.camel.springboot', name: 'camel-spring-boot-starter', version:versions.camel
     implementation group: 'org.apache.camel', name: 'camel-csv', version: versions.camel
     implementation group: 'org.apache.camel', name: 'camel-sql', version: versions.camel
     implementation group: 'org.apache.camel', name: 'camel-spring-batch', version: versions.camel
     implementation group: 'com.opencsv', name: 'opencsv', version: '3.7'
-
-    implementation group: 'org.apache.camel.springboot', name: 'camel-azure-starter', version:versions.camel
-    implementation group: 'org.apache.camel.springboot', name: 'camel-bindy-starter', version:versions.camel
-    implementation group: 'org.apache.camel.springboot', name: 'camel-jdbc-starter', version:versions.camel
     implementation group: 'org.apache.camel', name: 'camel-bean-validator', version: versions.camel
-    implementation group: 'org.apache.camel.springboot', name: 'camel-spring-boot-starter', version: versions.camel
-
-    implementation group: 'org.apache.camel', name: 'camel-core', version: versions.camel
     implementation group: 'org.apache.camel', name: 'spi-annotations', version: '3.4.1'
+    implementation group: 'org.apache.camel.springboot', name: 'camel-spring-boot-starter',  version: '4.2.0'
+    implementation group: 'org.apache.camel', name: 'camel-core',  version: '4.2.0'
+    implementation group: 'org.apache.camel.springboot', name: 'camel-azure-starter',  version: '3.8.0'
+    implementation group: 'org.apache.camel.springboot', name: 'camel-jdbc-starter',  version: '4.2.0'
 
+    implementation group: 'org.apache.camel.springboot', name: 'camel-bindy-starter', version: '4.2.0'
     //Added below dependencies for shedlock
     implementation group: 'net.javacrumbs.shedlock', name: 'shedlock-spring', version: '5.2.0'
     implementation group: 'net.javacrumbs.shedlock', name: 'shedlock-provider-jdbc-template', version: '5.2.0'
@@ -445,6 +438,8 @@ dependencies {
         exclude group: "org.hamcrest", module: "hamcrest-library"
     }
 
+    testImplementation 'net.serenity-bdd:serenity-rest-assured:3.8.1'
+    testImplementation group: 'net.serenity-bdd', name: 'serenity-junit', version: '3.8.1'
     testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: versions.junit
     testRuntimeOnly group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: versions.junit
     testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-params', version: versions.junit
@@ -459,18 +454,20 @@ dependencies {
         exclude group: "net.bytebuddy", module: "byte-buddy"
         exclude group: "net.bytebuddy", module: "byte-buddy-agent"
     }
-    testImplementation ('com.github.hmcts:rd-commons-lib:0.0.18'){
+    testImplementation ('com.github.hmcts:rd-commons-lib:v0.0.14'){
         exclude group: 'org.springframework.boot', module: 'spring-boot-starter-web'
+        exclude group: 'org.apache.groovy', module: 'groovy-json'
+        exclude group: 'org.apache.groovy', module: 'groovy'
+        exclude group: 'org.apache.groovy', module: 'groovy-xml'
     }
-    testImplementation group: 'net.bytebuddy', name: 'byte-buddy', version: '1.14.18'
-    testImplementation group: 'net.bytebuddy', name: 'byte-buddy-agent', version: '1.14.18'
+    testImplementation group: 'org.springframework', name: 'spring-test'
+
+    testImplementation group: 'net.bytebuddy', name: 'byte-buddy', version: versions.bytebuddy
+    testImplementation group: 'net.bytebuddy', name: 'byte-buddy-agent', version: versions.bytebuddy
 
     testImplementation group: 'org.mockito', name: 'mockito-junit-jupiter', version: '4.4.0'
 
     testImplementation group: 'org.powermock', name: 'powermock-api-mockito2', version: '2.0.9'
-
-    testImplementation group: 'io.rest-assured', name: 'rest-assured', version: '4.5.1'
-    testImplementation group: 'io.rest-assured', name: 'rest-assured-common', version: '4.5.1'
 
     testImplementation group: 'com.h2database', name: 'h2', version: '1.4.200'
 
@@ -496,15 +493,19 @@ dependencies {
     testImplementation 'io.github.openfeign:feign-jackson:12.5'
     testImplementation group: 'com.github.mifmif', name: 'generex', version: '1.0.2'
 
-    testImplementation 'org.springframework.cloud:spring-cloud-contract-wiremock:3.1.10'
+    implementation group: 'org.springframework.cloud', name: 'spring-cloud-contract-wiremock'
+    implementation group: 'com.microsoft.azure', name: 'applicationinsights-runtime-attach', version: '3.5.3'
+    implementation group: 'com.microsoft.azure', name: 'applicationinsights-core', version: '3.5.3'
+
 
     contractTestImplementation group: 'au.com.dius.pact.consumer', name: 'junit5', version: versions.pact_version
     contractTestImplementation group: 'au.com.dius.pact.consumer', name: 'java8', version: versions.pact_version
     contractTestRuntimeOnly group: 'au.com.dius.pact.consumer', name: 'junit5', version: versions.pact_version
     contractTestRuntimeOnly group: 'au.com.dius.pact.consumer', name: 'java8', version: versions.pact_version
 
-    contractTestImplementation group: 'au.com.dius.pact.provider', name: 'junit5', version: '4.3.2'
-    contractTestImplementation group: 'au.com.dius.pact.provider', name: 'junit5spring', version: '4.2.14'
+    contractTestImplementation group: 'au.com.dius.pact.provider', name: 'junit5', version: versions.pact_version
+    contractTestImplementation group: 'au.com.dius.pact.provider', name: 'spring', version: versions.pact_version
+    contractTestImplementation group: 'au.com.dius.pact.provider', name: 'junit5spring', version: versions.pact_version
 
     functionalTestImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.8.2'
     functionalTestRuntimeOnly group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: versions.junit
@@ -551,30 +552,10 @@ dependencies {
 dependencyManagement {
 
     dependencies {
-        // CVE-2021-25122
-        // CVE-2021-42340
-        // CVE-2023-28709
-        dependencySet(group: 'org.apache.tomcat.embed', version: '9.0.93') {
-            entry 'tomcat-embed-core'
-            entry 'tomcat-embed-el'
-            entry 'tomcat-embed-websocket'
-        }
-
-        dependencySet(group: 'com.fasterxml.jackson.core', version: '2.17.2') {
-            entry 'jackson-core'
-            entry 'jackson-annotations'
-        }
-        // CVE-2021-22060, CVE-2022-22965, CVE-2022-22950, CVE-2022-22971, CVE-2022-22968, CVE-2022-22970, CVE-2022-31690, CVE-2022-31692
-        dependency(group: 'org.springframework', name: 'spring-corespring-core', version: '5.3.22') //remove this line after spring boot upgrade to 2.7.7 and spring frame work to 6.0
 
         //CVE-2023-24998
         dependencySet(group: 'commons-fileupload', version: '1.5') {
             entry 'commons-fileupload'
-        }
-        //CVE-2021-22044
-        dependencySet(group: 'org.springframework.cloud', version: '3.1.9') {
-            entry 'spring-cloud-starter-openfeign'
-            entry 'spring-cloud-openfeign-core'
         }
 
 //        Resolves CVE-2023-4586
@@ -595,6 +576,10 @@ dependencyManagement {
             entry 'netty-transport-native-unix-common'
         }
 
+    }
+
+    imports {
+        mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
     }
 }
 
@@ -633,26 +618,6 @@ configurations.all {
             details.useVersion "32.1.1-jre"
         }
     }
-
-    resolutionStrategy.eachDependency { details ->
-        if (details.requested.group == 'org.bouncycastle'
-                && (details.requested.name == 'bcpkix-jdk18on'
-                || details.requested.name == 'bcprov-jdk18on')
-        ){
-            details.useVersion versions.bouncycastle
-        }
-    }
-}
-
-dependencies {
-    modules {
-        module("org.bouncycastle:bcpkix-jdk15on") {
-            replacedBy("org.bouncycastle:bcpkix-jdk18on")
-        }
-        module("org.bouncycastle:bcprov-jdk15on") {
-            replacedBy("org.bouncycastle:bcprov-jdk18on")
-        }
-    }
 }
 
 // this is required to force Java running on the Azure Windows Server OS into using
@@ -670,5 +635,14 @@ rootProject.tasks.named("processIntegrationTestResources") {
 }
 
 rootProject.tasks.named("processContractTestResources") {
+    duplicatesStrategy = 'include'
+}
+rootProject.tasks.named("bootJar") {
+    duplicatesStrategy = 'include'
+}
+rootProject.tasks.named("distTar") {
+    duplicatesStrategy = 'include'
+}
+rootProject.tasks.named("distZip") {
     duplicatesStrategy = 'include'
 }
