--- a/build.gradle
+++ b/build.gradle
@@ -19,7 +19,7 @@ plugins {
     id 'io.spring.dependency-management' version '1.1.6'
     id 'org.sonarqube' version '5.0.0.4638'
     id 'org.springframework.boot' version '3.3.1'
-    id "org.flywaydb.flyway" version '10.1.0'
+    id "org.flywaydb.flyway" version '10.18.0'
     id 'au.com.dius.pact' version '4.1.7'// do not change, otherwise serenity report fails
 }
 
@@ -375,9 +375,9 @@ dependencies {
     //Fix for CVE-2021-29425
     implementation 'commons-io:commons-io:2.8.0'
 
-    implementation group: 'org.flywaydb', name: 'flyway-core'
-    implementation group: 'org.flywaydb', name: 'flyway-database-postgresql'
-    implementation group: 'org.postgresql', name: 'postgresql'
+    implementation group: 'org.flywaydb', name: 'flyway-core', version: '10.18.0'
+    runtimeOnly group: 'org.flywaydb', name: 'flyway-database-postgresql', version: '10.18.0'
+    implementation group: 'org.postgresql', name: 'postgresql', version: '42.7.4'
 
     implementation group: 'com.google.guava', name: 'guava', version: '32.1.3-jre'
     //Added org.glassfish to support javax.el
