--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -169,3 +169,9 @@ azure:
     account-key: ${ACCOUNT_KEY:ACCOUNT_KEY}
     container-name: ${CONTAINER_NAME:CONTAINER_NAME}
     blob-url-suffix: ${BLOB_URL_SUFFIX:BLOB_URL_SUFFIX}
+
+springdoc:
+  swagger-ui:
+    enabled: true
+    operationsSorter: method
+  writer-with-order-by-keys: true
