DTSRD-3626 Fix PRD Swagger Page - attempt to set log level to DEBUG for hmcts

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -175,3 +175,5 @@ springdoc:
     enabled: true
     operationsSorter: method
   writer-with-order-by-keys: true
+
+logging.level.uk.gov.hmcts: DEBUG
