--- a/build.gradle
+++ b/build.gradle
@@ -8,12 +8,12 @@ plugins {
     id 'com.github.ben-manes.versions' version '0.51.0'
     id "info.solidsoft.pitest" version '1.15.0'
     id 'io.spring.dependency-management' version '1.1.6'
-    id 'org.sonarqube' version '5.1.0.4882'
-    id 'org.springframework.boot' version '3.3.5'
+    id 'org.sonarqube' version '6.0.1.5171'
+    id 'org.springframework.boot' version '3.3.6'
     id "org.flywaydb.flyway" version '9.22.3'
-    id 'au.com.dius.pact' version '4.6.15'// do not change, otherwise serenity report fails
-    id 'org.owasp.dependencycheck' version '10.0.3'
-    id 'net.serenity-bdd.serenity-gradle-plugin' version '4.2.6'
+    id 'au.com.dius.pact' version '4.6.15'
+    id 'org.owasp.dependencycheck' version '11.1.1'
+    id 'net.serenity-bdd.serenity-gradle-plugin' version '4.2.8'
 }
 
 
@@ -22,7 +22,7 @@ ext {
 }
 
 def versions = [
-        lombok          : '1.18.34',
+        lombok          : '1.18.36',
         gradlePitest    : '1.15.0',
         pitest          : '1.16.1',
         sonarPitest     : '0.5',
@@ -39,7 +39,7 @@ def versions = [
         bytebuddy       : '1.15.3',
         bouncycastle    : '1.79',
         postgresql_tc   : '1.20.0',
-        serenity        : '4.2.6'
+        serenity        : '4.2.9'
 ]
 
 application {
@@ -170,7 +170,7 @@ check.dependsOn jacocoTestCoverageVerification
 
 
 pmd {
-    toolVersion = '6.55.0'
+    toolVersion = '7.8.0'
     ignoreFailures = true
     sourceSets = [sourceSets.main, sourceSets.test, sourceSets.integrationTest, sourceSets.functionalTest, sourceSets.smokeTest]
     reportsDir = file("$project.buildDir/reports/pmd")
@@ -348,13 +348,13 @@ dependencies {
 
     implementation group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-jsr310'
     implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind'
-    implementation group: 'com.fasterxml.jackson', name: 'jackson-bom', version: '2.18.1', ext: 'pom'
+    implementation group: 'com.fasterxml.jackson', name: 'jackson-bom', version: '2.18.2', ext: 'pom'
     implementation group: 'io.jsonwebtoken', name: 'jjwt', version: '0.9.1'
     implementation group: 'jakarta.inject', name: 'jakarta.inject-api', version: '2.0.1'
     implementation 'com.github.hmcts:idam-java-client:3.0.3'
     implementation "org.springframework.boot:spring-boot-starter-oauth2-client"
     implementation "org.springframework.boot:spring-boot-starter-oauth2-resource-server"
-    implementation group: 'com.nimbusds', name: 'nimbus-jose-jwt', version: '9.44'
+    implementation group: 'com.nimbusds', name: 'nimbus-jose-jwt', version: '9.47'
     implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.17.0'
     implementation group: 'org.apache.commons', name: 'commons-text', version: '1.12.0'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
@@ -382,7 +382,6 @@ dependencies {
     implementation "com.github.hmcts.java-logging:logging:${versions.reformLogging}"
 
     implementation group: 'org.springdoc', name: 'springdoc-openapi-starter-webmvc-ui', version: '2.6.0'
-    implementation group: 'org.springdoc', name: 'springdoc-openapi-ui', version: '1.8.0'
     implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-bootstrap'
 
     implementation group: 'org.apache.camel', name: 'camel-csv', version: versions.camel
@@ -439,7 +438,7 @@ dependencies {
         exclude group: "net.bytebuddy", module: "byte-buddy"
         exclude group: "net.bytebuddy", module: "byte-buddy-agent"
     }
-    testImplementation 'com.github.hmcts:rd-commons-lib:0.0.19-beta3'
+    testImplementation 'com.github.hmcts:rd-commons-lib:0.1.0'
     testImplementation group: 'org.mockito', name: 'mockito-junit-jupiter', version: '5.14.2'
 
     testImplementation group: 'org.powermock', name: 'powermock-api-mockito2', version: '2.0.9'
@@ -447,7 +446,7 @@ dependencies {
     // tests on version 2 fails on flyway migrations, something like "incorrect syntax"
     testImplementation group: 'com.h2database', name: 'h2', version: '1.4.200'
 
-    testImplementation group: 'org.wiremock', name: 'wiremock', version: '3.9.2'
+    testImplementation group: 'org.wiremock', name: 'wiremock', version: '3.10.0'
 
     testImplementation group: 'org.springframework.boot', name: 'spring-boot-starter-test', {
         exclude group: 'junit', module: 'junit'
