changes to update contact information

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -96,9 +96,10 @@ security:
     - "/health/liveness"
     - "/actuator/**"
     - "/loggers/**"
+    - "/swagger"
     - "/swagger-ui.html"
     - "/swagger-resources/**"
-    - "/v3/**"
+    - "/v3/api-docs/**"
     - "/swagger-ui/**"
     - "/webjars/springfox-swagger-ui/**"
     - "/csrf"
