--- a/build.gradle
+++ b/build.gradle
@@ -225,11 +225,11 @@ task runProviderPactVerification(type: Test) {
 }
 
 task fortifyScan(type: JavaExec) {
-    mainClass.set("uk.gov.hmcts.fortifyclient.FortifyClientMainApp")
+    main("uk.gov.hmcts.fortifyclient.FortifyClientMainApp")
     classpath += sourceSets.test.runtimeClasspath
     jvmArgs = ['--add-opens=java.base/java.lang.reflect=ALL-UNNAMED']
     // This is a temporary fix to prevent the nightly build from failing if the Fortify scan detects issues
-    ignoreExitValue = true
+    ignoreExitValue = true as JavaExecSpec
 }
 
 runProviderPactVerification.finalizedBy pactVerify
